Fix modal z-index

--- a/documentation.sass
+++ b/documentation.sass
@@ -1,5 +1,3 @@
----
----
 @charset "utf-8"
 @import 'bulma/docs/bulma-docs.sass'
 @import '_sass/accordion.sass'
@@ -17,3 +15,6 @@
 @import '_sass/switch.sass'
 @import '_sass/timeline.sass'
 @import '_sass/tooltip.sass'
+
+.modal
+  z-index: 40
